// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBuiltInRoomListeners > should have correct segments for join 1`] = `
[
  {
    "type": "literal",
    "value": "rooms",
  },
  {
    "type": "param",
    "value": "roomId",
  },
  {
    "type": "literal",
    "value": "join",
  },
]
`;

exports[`createBuiltInRoomListeners > should have correct segments for leave 1`] = `
[
  {
    "type": "literal",
    "value": "rooms",
  },
  {
    "type": "param",
    "value": "roomId",
  },
  {
    "type": "literal",
    "value": "leave",
  },
]
`;
